[package]
name = "kos"
version = "0.1.0"
authors = ["Kitsu <mail@kitsu.me>", "Sweetbread"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "hwa"
path = "examples/hwa.rs"

[[example]]
name = "con"
path = "examples/con.rs"

[profile.release]
opt-level = "z"
lto = "thin"

[dependencies]
cstr_core = { version = "0.2.4", default-features = false, features = ["nightly"] }

[build-dependencies]
